--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/playerController.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/Global.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-400
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,24 +28,24 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/track_segment.tscn", "res://scenes/test_level.tscn", "res://scenes/main_game.tscn")
+open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/track_segment.tscn", "res://scenes/test_level.tscn", "res://scenes/main_game.tscn", "res://scenes/obstacle_barrier.tscn", "res://scenes/obstacle_train.tscn", "res://scenes/coin.tscn")
 current_scene="res://scenes/main_game.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
 position=Vector2i(0, 34)
-size=Vector2i(1054, 1000)
+size=Vector2i(1547, 1321)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/Global.gd", "res://scripts/LevelGenerator.gd", "res://scripts/playerController.gd", "res://TrackSegment.gd"]
-selected_script="res://scripts/Global.gd"
+open_scripts=["res://coin.gd", "res://scripts/Global.gd", "res://scripts/LevelGenerator.gd", "res://scripts/playerController.gd", "res://TrackSegment.gd"]
+selected_script="res://coin.gd"
 open_help=["CharacterBody3D"]
 script_split_offset=200
 list_split_offset=0
