--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/obstacle_high.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-216
+dock_hsplit_3=-586
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/track_segment.tscn", "res://scenes/test_level.tscn", "res://scenes/main_game.tscn", "res://scenes/obstacle_barrier.tscn", "res://scenes/obstacle_train.tscn", "res://scenes/coin.tscn", "res://scenes/hud.tscn", "res://scenes/obstacle_high.tscn")
-current_scene="res://scenes/obstacle_high.tscn"
+current_scene="res://scenes/main_game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -38,14 +38,14 @@ selected_bottom_panel_item=0
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(2, 45)
+mode="maximized"
+position=Vector2i(0, 34)
 size=Vector2i(1429, 1321)
 
 [ScriptEditor]
 
 open_scripts=["res://coin.gd", "res://scripts/Global.gd", "res://scripts/hud.gd", "res://scripts/LevelGenerator.gd", "res://scripts/playerController.gd", "res://TrackSegment.gd"]
-selected_script="res://TrackSegment.gd"
+selected_script="res://scripts/playerController.gd"
 open_help=["CharacterBody3D"]
 script_split_offset=200
 list_split_offset=0
