add dificulty over time

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -45,7 +45,7 @@ size=Vector2i(1429, 1321)
 [ScriptEditor]
 
 open_scripts=["res://coin.gd", "res://scripts/Global.gd", "res://scripts/hud.gd", "res://scripts/LevelGenerator.gd", "res://scripts/playerController.gd", "res://TrackSegment.gd"]
-selected_script="res://TrackSegment.gd"
+selected_script="res://scripts/LevelGenerator.gd"
 open_help=["CharacterBody3D"]
 script_split_offset=200
 list_split_offset=0
