--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/obstacle_high.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/pause_menu.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/track_segment.tscn", "res://scenes/test_level.tscn", "res://scenes/main_game.tscn", "res://scenes/obstacle_barrier.tscn", "res://scenes/obstacle_train.tscn", "res://scenes/coin.tscn", "res://scenes/hud.tscn", "res://scenes/obstacle_high.tscn")
-current_scene="res://scenes/main_game.tscn"
+open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/track_segment.tscn", "res://scenes/test_level.tscn", "res://scenes/main_game.tscn", "res://scenes/obstacle_barrier.tscn", "res://scenes/obstacle_train.tscn", "res://scenes/coin.tscn", "res://scenes/hud.tscn", "res://scenes/obstacle_high.tscn", "res://scenes/main_menu.tscn", "res://scenes/pause_menu.tscn")
+current_scene="res://scenes/player.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,8 +44,8 @@ size=Vector2i(1429, 1321)
 
 [ScriptEditor]
 
-open_scripts=["res://coin.gd", "res://scripts/Global.gd", "res://scripts/hud.gd", "res://scripts/LevelGenerator.gd", "res://scripts/playerController.gd", "res://TrackSegment.gd"]
-selected_script="res://scripts/LevelGenerator.gd"
+open_scripts=["res://coin.gd", "res://scripts/Global.gd", "res://scripts/hud.gd", "res://scripts/LevelGenerator.gd", "res://main_menu.gd", "res://pause_menu.gd", "res://scripts/playerController.gd", "res://TrackSegment.gd"]
+selected_script="res://pause_menu.gd"
 open_help=["CharacterBody3D"]
 script_split_offset=200
 list_split_offset=0
