add world curve shader

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -12,49 +12,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://TrackSegment.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 42,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scripts/playerController.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 10,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 56,
-"scroll_position": 73.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/LevelGenerator.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 32,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 24,
-"scroll_position": 18.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://coin.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -62,7 +20,7 @@ state={
 "column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 96,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -82,7 +40,39 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://main_menu.gd]
+[res://scripts/coin.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/game_over_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 22,
+"selection_to_column": 22,
+"selection_to_line": 22,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/main_menu.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -96,7 +86,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://pause_menu.gd]
+[res://scripts/pause_menu.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -105,6 +95,34 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 11,
+"scroll_position": 11.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/TrackSegment.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 42,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/MainGame.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 55,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 45,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
