--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/pause_menu.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://shaders/CurvedWorld.gdshader")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -28,37 +28,37 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/track_segment.tscn", "res://scenes/test_level.tscn", "res://scenes/main_game.tscn", "res://scenes/obstacle_barrier.tscn", "res://scenes/obstacle_train.tscn", "res://scenes/coin.tscn", "res://scenes/hud.tscn", "res://scenes/obstacle_high.tscn", "res://scenes/main_menu.tscn", "res://scenes/pause_menu.tscn")
-current_scene="res://scenes/player.tscn"
+open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/track_segment.tscn", "res://scenes/test_level.tscn", "res://scenes/main_game.tscn", "res://scenes/obstacle_barrier.tscn", "res://scenes/obstacle_train.tscn", "res://scenes/coin.tscn", "res://scenes/hud.tscn", "res://scenes/obstacle_high.tscn", "res://scenes/main_menu.tscn", "res://scenes/pause_menu.tscn", "res://scenes/game_over_menu.tscn")
+current_scene="res://scenes/coin.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=7
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 34)
+position=Vector2i(2360, 201)
 size=Vector2i(1429, 1321)
 
 [ScriptEditor]
 
-open_scripts=["res://coin.gd", "res://scripts/Global.gd", "res://scripts/hud.gd", "res://scripts/LevelGenerator.gd", "res://main_menu.gd", "res://pause_menu.gd", "res://scripts/playerController.gd", "res://TrackSegment.gd"]
-selected_script="res://pause_menu.gd"
+open_scripts=["res://scripts/coin.gd", "res://scripts/game_over_menu.gd", "res://scripts/Global.gd", "res://scripts/hud.gd", "res://scripts/MainGame.gd", "res://scripts/main_menu.gd", "res://scripts/pause_menu.gd", "res://scripts/playerController.gd", "res://scripts/TrackSegment.gd"]
+selected_script="res://scripts/game_over_menu.gd"
 open_help=["CharacterBody3D"]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=1.5714282
+zoom_factor=0.9285712
 
 [GameView]
 
-floating_window_rect=Rect2i(698, 319, 1164, 695)
+floating_window_rect=Rect2i(2738, 329, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://shaders/CurvedWorld.gdshader"]
 split_offset=200
-selected_shader=""
+selected_shader="res://shaders/CurvedWorld.gdshader"
 text_shader_zoom_factor=1.0
