--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/models/Character/characters_sam.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/textures/", "res://assets/models/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/traffic_barrier_22.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/textures/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/track_segment.tscn", "res://scenes/test_level.tscn", "res://scenes/main_game.tscn", "res://scenes/obstacle_barrier.tscn", "res://scenes/obstacle_train.tscn", "res://scenes/coin.tscn", "res://scenes/hud.tscn", "res://scenes/obstacle_high.tscn", "res://scenes/main_menu.tscn", "res://scenes/pause_menu.tscn", "res://scenes/game_over_menu.tscn", "res://scenes/player.tscn", "res://assets/models/Character/Character.tscn", "res://assets/models/Barrier/gravestone_roof.tscn", "res://assets/models/Barrier/gravestone_bevel.tscn", "res://assets/models/Barrier/gravestone_broken.tscn", "res://assets/models/Barrier/gravestone_cross_large.tscn", "res://assets/models/Train/altar_stone.tscn", "res://assets/models/Train/altar_wood.tscn", "res://assets/models/Train/coffin_old.tscn", "res://assets/models/Train/coffin.tscn", "res://assets/models/Train/crypt_a.tscn", "res://assets/models/Train/crypt_b.tscn", "res://assets/models/Train/crypt.tscn", "res://assets/models/Terrain/tile_tree_quad.tscn", "res://assets/models/Terrain/tile_tree_double.tscn", "res://assets/models/Terrain/tile_straight.tscn", "res://assets/models/Character/characters_sam.tscn")
-current_scene="res://scenes/main_game.tscn"
+open_scenes=PackedStringArray("res://scenes/track_segment.tscn", "res://scenes/test_level.tscn", "res://scenes/main_game.tscn", "res://scenes/obstacle_barrier.tscn", "res://scenes/obstacle_train.tscn", "res://scenes/coin.tscn", "res://scenes/hud.tscn", "res://scenes/obstacle_high.tscn", "res://scenes/main_menu.tscn", "res://scenes/pause_menu.tscn", "res://scenes/game_over_menu.tscn", "res://scenes/player.tscn", "res://assets/models/Character/Character.tscn", "res://assets/models/Barrier/gravestone_roof.tscn", "res://assets/models/Barrier/gravestone_bevel.tscn", "res://assets/models/Barrier/gravestone_broken.tscn", "res://assets/models/Barrier/gravestone_cross_large.tscn", "res://assets/models/Train/altar_stone.tscn", "res://assets/models/Train/altar_wood.tscn", "res://assets/models/Train/coffin_old.tscn", "res://assets/models/Train/coffin.tscn", "res://assets/models/Train/crypt_a.tscn", "res://assets/models/Train/crypt_b.tscn", "res://assets/models/Train/crypt.tscn", "res://assets/models/Terrain/tile_tree_quad.tscn", "res://assets/models/Terrain/tile_tree_double.tscn", "res://assets/models/Terrain/tile_straight.tscn", "res://assets/models/Character/characters_sam.tscn", "res://scenes/traffic_barrier_22.tscn")
+current_scene="res://scenes/player.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
